Bug 59032 - FILEOPEN: regression: libreoffice 4.0 no longer updates DDE on previously saved files
Summary: FILEOPEN: regression: libreoffice 4.0 no longer updates DDE on previously sav...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
4.0.0.0.beta2
Hardware: Other Windows (All)
: medium normal
Assignee: Markus Mohrhard
URL:
Whiteboard: BSA target:4.1.0 target:4.0.1
Keywords: regression
Depends on:
Blocks:
 
Reported: 2013-01-04 19:06 UTC by Yi Ding
Modified: 2013-02-01 15:31 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
dde test document (9.26 KB, application/vnd.oasis.opendocument.spreadsheet)
2013-01-30 16:53 UTC, Yi Ding
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Yi Ding 2013-01-04 19:06:47 UTC
We have a few DDE spreadsheets that bring in market data from a 3rd party application using DDE.

In Libreoffice 3.6, this worked perfectly.

In 4.0, the first time we paste the DDE code it works OK, but if we close the spreadsheet and reopen it, the DDE no longer updates even though the links are "automatic."
Operating System: Windows 7
Version: 4.0.0.0.beta2
Last worked in: 3.6.4.3 release
Comment 1 Joel Madero 2013-01-11 04:56:23 UTC
Can we get a test document from you by chance? Marking as NEEDINFO. If you can't just reopen as REOPENED and leave a comment (just makes it a lot easier if we have a test document). 

Thanks in advance
Comment 2 Markus Mohrhard 2013-01-30 06:04:50 UTC
I need a file to reproduce it. Otherwise it is nearly impossible to fix this problem. Looks like another problem around the cached value import but since I have no idea how to create I'm not able to fix it.

Since there has been no test file I could not fix it in time for 4.0.0 with the other cached value import bugs. Please provide a test file ASAP.
Comment 3 Yi Ding 2013-01-30 16:34:35 UTC
Yeah, sorry, I can get you a test document with DDE, but it won't be any good because you won't have the program to actually provide the DDE data.

Do you guys have any DDE test documents of your own?
Comment 4 Yi Ding 2013-01-30 16:53:08 UTC
Created attachment 73938 [details]
dde test document

I don't know how useful this is.
Comment 5 Yi Ding 2013-01-30 16:53:20 UTC
Reopening.
Comment 6 Markus Mohrhard 2013-01-30 21:00:43 UTC
Quite an easy fix.
Comment 7 Not Assigned 2013-01-30 21:12:32 UTC
Markus Mohrhard committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=63e3d8671ef5cf9405405c8f3c388b0aea679e91

make it possible to update DDE links after loading, fdo#59032



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 8 Kohei Yoshida 2013-02-01 15:31:29 UTC
I'll mark this fixed.  The automatic commit message should follow soon.
Comment 9 Not Assigned 2013-02-01 15:31:51 UTC
Markus Mohrhard committed a patch related to this issue.
It has been pushed to "libreoffice-4-0":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=3305827a24a1b9c66220bb3578fec6a43df4a421&h=libreoffice-4-0

make it possible to update DDE links after loading, fdo#59032


It will be available in LibreOffice 4.0.1.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.