make it possible to update DDE links after loading, fdo#59032

Change-Id: Iba49bec62cb9081cdcd9410215f269b59c1be304